@startuml
class SubscriptionController {
 +switchPlan(Long idPlan, Long id);
}



class SubscriptionService {
 +switchPlan(Long idPlan, Long id);
}
class SubscriptionServiceImpl{
+switchPlan(Long idPlan, Long id);
+subscriptionOptional.ifPresent(subscription -> subscription.setPlan(planRepository.getById(idPlan)));
+subscriptionOptional.ifPresent(subscription -> subscription.setRenewDate(LocalDate.now().plusYears(1)));
+subscriptionOptional.ifPresent(subscription -> subscription.setRenewDate(LocalDate.now().plusMonths(1)));
}

interface SubscriptionRepository <<interface>> {
 +save(subscriptionOptional.get())
 +findSubscriptionIdByUserId(id)
 +setPlan(planRepository.getById(idPlan))
}


class Subscription {
    -id
    -subType
    -date
    -subState
    -feeType
    Subscription(int id, string subType, date date, string subState, string feeType)
    +getID(): int
    +getSubType(): string
    +getDate(): date
    +getSubState(): string
    +getFeeType(): string

}

SubscriptionRepository "1" --> "0..*" Subscription:  records
SubscriptionController ..> SubscriptionService
SubscriptionServiceImpl ..> SubscriptionRepository
SubscriptionServiceImpl ..> Subscription
SubscriptionService ..> Subscription
SubscriptionServiceImpl .up.|> SubscriptionService
@enduml